k8s-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questionnaire-frontend
  labels:
    app: questionnaire-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-frontend
  template:
    metadata:
      labels:
        app: questionnaire-frontend
    spec:
      containers:
      - name: questionnaire-frontend
        image: ghcr.io/krupskiiandrei/questionnaire-frontend:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-frontend
spec:
  selector:
    app: questionnaire-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
